# python-library-project-generator

./: .editorconfig  .gitignore  .gitlab-ci.yml  .releaserc  CHANGELOG.md  LICENSE  Makefile  README.rst  cookiecutter.json  gitlab_pipelines_tests_requirements.txt  pyproject.toml  test.sh  tests_requirements.txt
.github/actions/provision-project-from-cookiecutter/: Dockerfile  action.yaml  instanciate_project_and_validate_it.sh
.github/workflows/: end_to_end_tests.yaml  test_and_make_release.yml  test_gitlab_pipeline.yml  test_hosting_options_cleanness.yml
docs/adr/: 0000-record-architecture-decisions.md  0001-use-markdown-architectural-decision-records.md  0002-use-gnu-make-to-centralise-all-tasks.md  XXXX-use-gnu-make-to-centralise-all-tasks.md  XXXX-use-poetry-for-python-packaging-and-dependency-management.md  XXXX-use-pyenv-to-set-up-multiple-python-version-on-host.md  index.md
features/: bdd_tests_generated.feature
features/steps/: use_steplib_behave4cli.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: Dockerfile  Dockerfile.tests  README.md  instanciate_project_and_validate_it.sh  run_test.sh  test_gitlab_pipeline.py  test_no_github_in_gitlab_generated_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/behave4cmd0/: README.txt  command_steps.py
{{cookiecutter.project_slug}}/docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  modules.rst  requirements.txt  usage.rst
{{cookiecutter.project_slug}}/features/: cli.feature  functional.feature
{{cookiecutter.project_slug}}/features/steps/: sample_steps.py  use_steplib_behave4cli.py  use_steplib_behave4cmd.py
{{cookiecutter.project_slug}}/scripts/: install_poetry.sh  install_pyenv.sh  semantic_release_exec_verify_release.sh  verify_pypi_env_variables.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.project_package_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_package_name}}/: __init__.py  __version__.py  cli.py  const.py  core.py  exceptions.py
